--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "version": "1.2",
     "api_version": 3,
     "layout": {
-        "logo": "https://github.com/ZeburG1/zeburgsite/raw/master/public/favicon.ico",
+        "logo": "/manifest.png",
         "color": "#222222",
         "show_title": false
     }
