--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-    "version": "1.5",
+    "version": "2",
     "api_version": 3,
     "layout": {
-        "logo": "/manifest.png",
+        "logo": "manifest.png",
         "color": "#222222",
         "show_title": false
     }
