--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "version": "2",
     "api_version": 3,
     "layout": {
-        "logo": "manifest.png",
+        "logo": "https://zebur-g.vercel.app/img/manifest.c1abc2a6.png",
         "color": "#222222",
         "show_title": false
     }
