--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "version": "1.2",
     "api_version": 3,
     "layout": {
-        "logo": "https://zebur-g.vercel.app/img/",
+        "logo": "/icon_256x256.png",
         "color": "#222222"
     }
 }
